src/css/style.css
html {
    
}


body {
    font-family: "Fira Sans", sans-serif;
    /* Try Editorial new & black & white site with color pop (nameless.today)*/
    background-color: rba(0,0,0,.25);
    color: #FFFAEF;

    background: linear-gradient(65deg, #000, #0F161C, #0B1D1F, #1A2C2E, #0D1216, #000, #1A2C2E);
    background-size: 400% 400%;
    width: 100%;
    height: 100vh;
    animation: animate 20s ease infinite;
    min-height: 100vh;
}

@keyframes animate {
    0% {
        background-position: 0 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0 50%;
    }
}

#main-content {
    /* May need to set this on the wrapper */
    margin: 0 auto;
    width: 100%;
    max-width: 800px;
}

@media screen and (max-width: 800px) {
    #main-content {
        max-width: 600px;
    }

    .projects-container {
        margin: 0 16px;
    }
    .company-list {
        margin: 0 16px;
    }
}

h2, h3, h4, h5, h6 {
    font-weight: 600;
}

p {
    font-weight: 300;
    line-height: 1.25rem;
}

strong {
    font-weight: 600;
}

/* Navbar */
.nav {
    margin: 16px 0;
    display: flex;
    justify-content: space-between;
}

.nav-right {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}


/* .name-gradient {
    -webkit-text-fill-color: transparent;
    color: transparent;
    background: linear-gradient(130deg, #327AAD, #C23CC5);
    -webkit-background-clip: text;
    background-clip: text;
} */

/* Hero Styles */
.hero-section {
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(10.7px);
    -webkit-backdrop-filter: blur(10.7px);
    outline: 1px solid rgba(255, 255, 255, 0.1);

    display: flex;
    flex-direction: row;
    justify-content: center;

    overflow: hidden;
    margin-bottom: 80px;
}

@media screen and (max-width: 800px) {
    .hero-section {
        flex-direction: column;
    }
    .hero-left img {
        display: none;
    }
}


.hero-section a {
    font-weight: 400;
    text-decoration: underline;
}

.hero-section h1 {
    font-weight: 900;
}
.hero-section h3 {
    font-weight: 100;
}

.hero-left {
    margin: 0px;
    padding: 0px;
}

.hero-left img {
    width: 300px;
    height: 100%;
}

.hero-right {
    padding: 32px;
}

/* Projects List */

.project-header{
    margin-bottom: 1rem;
}

.projects-grid {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
    align-items: stretch;
}

.project-card {
    flex-basis: 48%;
    margin: 8px;
    overflow: hidden;

    background: rgba(255, 255, 255, 0.08);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(10.7px);
    -webkit-backdrop-filter: blur(10.7px);
    outline: 1px solid rgba(255, 255, 255, 0.1);

}

.project-image {
    display: flex;
}

.project-image img {
    height: 70px;
    max-width: 100%;
}

.project-card:hover {
    background: rgba(255, 255, 255, 0.1);
    outline: 1px solid rgba(255, 255, 255, 0.16);
    cursor: pointer;
}

.project-card img {
    transition: transform .5s ease-in-out;
}

.project-card:hover img {
    transform: scale(1.05);
}

@media screen  and (max-width: 800px) {    
    .project-card {
        flex-basis: 100%;
        margin: 24px 0;
    }
}

.project-card .content {
    padding: 24px;
}

.project-card .tag-list {
    display: flex; 
    flex-direction: row;
}

.project-tag {
    border-radius: 4px;
    background: #92B4C2;
    padding: 4px;
    color:#25414D;
    margin-right: 8px;
}

/* Company List */
.companies-wrapper {
    margin: 8rem 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.company-list {
    max-width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    gap: 48px;
}

.company-list img {
    align-self: center;
    flex: 0 0 auto;
    cursor: pointer;
}

@media screen and (min-width: 1024px) {
    .company-list img {
        width: calc(100%/6);
        height: calc(100%/6);
    }
}

@media screen and (min-width: 769px) and (max-width: 1024px) {
    .company-list img {
        width: calc(100%/4);
        height: calc(100%/4);
    }
}

@media screen and (min-width: 481px) and (max-width: 768px) {
    .company-list img {
        width: calc(100%/3);
        height: calc(100%/3);
    }
}

@media screen and (min-width: 321px) and (max-width: 480px) {
    .company-list img {
        width: calc(100%/2);
        height: calc(100%/2);
    }
}

@media screen  and (max-width: 320px) {
    .company-list img {
        width: 100%;
        height: 100%;
    }
}

.logo-grey {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
}

.logo-grey:hover {
    -webkit-filter: none !important;
    filter: none !important;
}

/* Projects Page */
.old-new-container {
    display: flex;
    flex-direction: column;
    gap: 24px;

}

.old-new-container img {
    width: 50%;
}

.old-new-container img:first-child {
    width: 80%;
}


a { 
    color: white;
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

/* Footer */
.footer-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 8rem;
}

.footer-container p {
    margin: 0;
}
.footer-container p:first-child {
    margin-bottom: 0.5rem;
}


footer a {
    color: white;
    transition: 250ms ease-in-out;
    box-shadow: inset 0px -4px 0 #4A8299;
    text-decoration: none;
}

footer a:hover {
    box-shadow: inset 0px -16px 0 #4A8299;
    text-decoration: none;
}




/* Spinner */
#main-content {
    display: hidden;
}

.spinner-border {
    width: 3rem;
    height: 3rem;
    border-width: 0.25rem;
    border-style: solid;
    border-radius: 50%;
    border-color: transparent transparent transparent currentColor;
    -webkit-animation: spin 3s linear infinite;
    animation: spin 3s linear infinite;
    display: none;
}

@-webkit-keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% { 
        transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
} 

